--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,7 +10,7 @@
 # DATABASE_URL="file:./dev.db"
 
 # LocalDatabase
-# DATABASE_URL="mysql://root:abc123@127.0.0.1:3306/next-nest-graphql"
+# DATABASE_URL="mysql://root:abc123@127.0.0.1:3306/kagami"
 
 # DockerDatabase
-DATABASE_URL="mysql://root:abc123@db:3306/next-nest-graphql"
+DATABASE_URL="mysql://root:abc123@db:3306/kagami"
