--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "editor.codeActionsOnSave": {
     "source.fixAll": true
-  }
+  },
+  "hadolint.cliOptions": ["--no-color", "--ignore", "DL3008"]
 }
