--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^5.5.3",
     "@mui/styles": "^5.5.3",
     "@mui/system": "^5.5.3",
+    "@types/draft-js": "^0.11.9",
+    "draft-js": "^0.11.7",
     "firebase": "^9.6.10",
     "graphql": "^16.0.1",
     "next": "12.1.4",
