--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.5.3",
     "@mui/styles": "^5.5.3",
     "@mui/system": "^5.5.3",
+    "dayjs": "^1.11.1",
     "firebase": "^9.6.10",
     "graphql": "^16.0.1",
     "next": "12.1.4",
