--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.5.3",
     "@mui/styles": "^5.5.3",
     "@mui/system": "^5.5.3",
