--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,18 @@
 {
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "timezone": "Asia/Tokyo",
+  "schedule": "on saturday",
+  "labels": ["renovate"],
+  "packageRules": [
+    {
+      "groupName": "major dependencies",
+      "matchUpdateTypes": "major",
+      "addLabels": ["major-update"]
+    },
+    {
+      "groupName": "minor dependencies",
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest", "lockFileMaintenance"],
+      "automerge": true
+    }
   ]
 }
