--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "start": "next start",
     "lint": "next lint --dir src",
     "lint:fix": "next lint --dir src --fix",
-    "format": "prettier --write --ignore-path .gitignore './**/*.{ts,tsx,json}'",
-    "format:fix": "prettier --ignore-path .gitignore './**/*.{ts,tsx,json}'",
+    "format": "prettier --ignore-path .gitignore './**/*.{ts,tsx,json}'",
+    "format:fix": "prettier --write --ignore-path .gitignore './**/*.{ts,tsx,json}'",
     "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
