--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint --dir src",
     "lint:fix": "next lint --dir src --fix",
-    "format": "prettier --ignore-path .gitignore './**/*.{ts,tsx,json}'",
+    "format": "prettier --check './**/*.{ts,tsx,json}'",
     "format:fix": "prettier --write --ignore-path .gitignore './**/*.{ts,tsx,json}'",
     "generate": "graphql-codegen --config codegen.yml"
   },
