--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   // Configuration for JavaScript files
   "extends": ["airbnb-base", "next/core-web-vitals", "plugin:prettier/recommended"],
+  "ignorePatterns": ["src/graphql/generated.ts"],
   "rules": {
     "prettier/prettier": [
       "error",
