--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,12 +28,12 @@ jobs:
 
       - name: Get yarn cache directory path
         id: yarn-cache-backend-path
-        run: echo "::set-output name=backend::$(yarn cache backend)"
+        run: echo "::set-output name=backend::$(yarn cache dir)"
 
       - uses: actions/cache@v3
         id: yarn-cache-backend
         with:
-          path: ${{ steps.yarn-cache-backend-path.outputs.dir }}
+          path: ${{ steps.yarn-cache-backend-path.outputs.backend }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
 
