--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -28,12 +28,12 @@ jobs:
 
       - name: Get yarn cache directory path
         id: yarn-cache-frontend-path
-        run: echo "::set-output name=frontend::$(yarn cache frontend)"
+        run: echo "::set-output name=frontend::$(yarn cache dir)"
 
       - uses: actions/cache@v3
         id: yarn-cache-frontend
         with:
-          path: ${{ steps.yarn-cache-frontend-path.outputs.dir }}
+          path: ${{ steps.yarn-cache-frontend-path.outputs.frontend }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
 
