--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@emotion/react": "11.9.3",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.9.3",
+    "@lexical/hashtag": "^0.3.5",
+    "@lexical/react": "^0.3.5",
     "@mui/icons-material": "5.8.4",
     "@mui/material": "5.8.4",
     "@mui/styles": "5.8.4",
@@ -24,6 +26,7 @@
     "dayjs": "1.11.3",
     "firebase": "9.8.3",
     "graphql": "16.5.0",
+    "lexical": "^0.3.5",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
