--- a/backend/package.json
+++ b/backend/package.json
@@ -51,7 +51,8 @@
     "qs": "6.10.5",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.5.5"
+    "rxjs": "7.5.5",
+    "winston": "^3.8.0"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.8",
