--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "@emotion/styled": "11.9.3",
     "@lexical/hashtag": "0.3.7",
     "@lexical/react": "0.3.7",
-    "@mui/icons-material": "5.8.4",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "5.8.7",
     "@mui/styles": "5.8.7",
     "@mui/system": "5.8.7",
