--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "extends": ["config:base"],
   "timezone": "Asia/Tokyo",
-  "schedule": "on saturday",
+  "schedule": "every 3 months on the first day of the month",
   "labels": ["renovate"],
   "packageRules": [
     {
